fix responsive layout issues on small screens

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 header {
     background-color: rgb(179, 188, 194);
     background-repeat: no-repeat;
